--- a/source/assets/stylesheets/pages/_thanks.scss
+++ b/source/assets/stylesheets/pages/_thanks.scss
@@ -1,6 +1,9 @@
-body.bedankt {
-  section.content {
-    font-size: $base-font-size * 1.2;
-    text-align: center;
+body.subpage {
+  a {
+    color: $white;
+
+    &:hover {
+      text-decoration: none;
+    }
   }
 }
