--- a/source/partials/_site_navigation.erb
+++ b/source/partials/_site_navigation.erb
@@ -9,7 +9,7 @@
   <div class="navigation-bar">
     <ul class="menu">
       <li>
-        <%= current_link_to t("navigation.index"), "#home", class: "root-link" %></li><li>
+        <%= current_link_to t("navigation.index"), "#home", relative: false, class: "root-link" %></li><li>
         <%= current_link_to t("navigation.about"), "#about", class: "root-link" %></li><li>
         <%= current_link_to t("navigation.bands"), "#bands", class: "root-link" %></li><li>
         <%= current_link_to t("navigation.breweries"), "#breweries", class: "root-link" %></li><li>
