--- a/source/localizable/bedankt.html.erb
+++ b/source/localizable/bedankt.html.erb
@@ -5,15 +5,14 @@ title:
 description:
   nl: "We nemen zo spoedig mogelijk contact op."
   en: "We will contact you as soon as possible."
+link:
+  nl: "/"
+  en: "/en/"
 robots: noindex,nofollow
+custom_class: "subpage"
 ---
 
-<%= partial "partials/banner", locals: { variant: "variant-normal",
-                                         variant_overlay: "primary-overlay",
-                                         title: t("pages.thanks.title")} %>
-
-<section class="content">
-  <div class="grid-row">
-    <%= partial "bedankt/content" %>
-  </div>
-</section>
+<%= partial "partials/banner", locals: { variant: "variant-full-height",
+                                         title: t("pages.thanks.title"),
+                                         link: local_link,
+                                         link_text: t("pages.thanks.home")} %>
