Fix active nav item

--- a/source/assets/stylesheets/components/_banner.scss
+++ b/source/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,5 @@
 header.banner {
-  background: $bordeaux no-repeat center center fixed;
+  background: $bordeaux no-repeat center center;
   background-size: cover;
   color: $white;
   padding: 60px $base-spacing 0;
