--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -9,6 +9,11 @@ body.index {
       padding: 4em 1em;
     }
 
+    .more {
+      padding: 1em 0;
+      text-align: center;
+    }
+
     h2 {
       font-size: $base-font-size * 1.6;
       margin-bottom: 1em;
