--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -27,7 +27,7 @@ blog: menu
     <div class="flex-wrapper">
 
       <div class="flex-item">
-        <div class="item-image">
+        <div class="item-image border-white">
           <%= image_tag "assets/images/bands/electric-hollers.jpg", alt: "Electric Hollers" %>
         </div>
         <div class="item-text">
@@ -55,8 +55,8 @@ blog: menu
     <div class="flex-wrapper">
 
       <div class="flex-item">
-        <div class="item-image">
-          <%= image_tag "assets/images/breweries/stanislaus-brewskovitch.svg", alt: "Stanislaus Brewskovitch" %>
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/stanislaus-brewskovitch.png", alt: "Stanislaus Brewskovitch" %>
         </div>
         <div class="item-text">
           <h3>
@@ -69,7 +69,7 @@ blog: menu
       </div>
 
       <div class="flex-item">
-        <div class="item-image">
+        <div class="item-image border-light-gray">
           <%= image_tag "assets/images/breweries/berging-brouwerij.png", alt: "Berging Brouwerij" %>
         </div>
         <div class="item-text">
@@ -83,7 +83,7 @@ blog: menu
       </div>
 
       <div class="flex-item">
-        <div class="item-image">
+        <div class="item-image border-light-gray">
           <%= image_tag "assets/images/breweries/brouwerij-klein-duimpje.png", alt: "Brouwerij Klein Duimpje" %>
         </div>
         <div class="item-text">
