--- a/source/assets/stylesheets/components/_flex-wrapper.scss
+++ b/source/assets/stylesheets/components/_flex-wrapper.scss
@@ -5,20 +5,16 @@
     text-align: left;
   }
 
-  .more {
-    padding: 1em 0;
-    text-align: center;
-  }
-
   .flex-item {
+    padding: 2em 1em;
+
     @include grid-media($for-desktop-up) {
       display: flex;
-      padding: 2em 1em;
     }
   }
 
   .item-image {
-    border: 2px solid $white;
+    border: 1px solid $bordeaux;
     border-radius: 50%;
     height: 280px;
     margin: 0 auto 1em;
@@ -30,6 +26,14 @@
       height: 120px;
       margin-right: 1em;
       width: 120px;
+    }
+
+    &.border-light-gray {
+      border-color: $lighter-gray;
+    }
+
+    &.border-white {
+      border-color: $white;
     }
 
     img {
