--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -40,6 +40,20 @@ blog: menu
         </div>
       </div>
 
+      <div class="flex-item">
+        <div class="item-image border-white">
+          <%= image_tag "assets/images/bands/10000v.jpg", alt: "10.000 Volt Blues Band" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            10.000 Volt Blues Band
+          </h3>
+          <p>
+            <%= t("sections.bands.volt.text") %>
+          </p>
+        </div>
+      </div>
+
       <p class="more">
         <em><%= t("sections.bands.more") %></em>
       </p>
