--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -110,6 +110,20 @@ blog: menu
         </div>
       </div>
 
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/nevel-artisan-ales.png", alt: "Nevel Artisan Ales" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Nevel Artisan Ales
+          </h3>
+          <p>
+            <%= t("sections.breweries.nevel.text") %>
+          </p>
+        </div>
+      </div>
+
       <p class="more">
         <em><%= t("sections.breweries.more") %></em>
       </p>
