--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -124,6 +124,20 @@ blog: menu
         </div>
       </div>
 
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/doggerland.png", alt: "Doggerland Craft Cider" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Doggerland Craft Cider
+          </h3>
+          <p>
+            <%= t("sections.breweries.doggerland.text") %>
+          </p>
+        </div>
+      </div>
+
       <p class="more">
         <em><%= t("sections.breweries.more") %></em>
       </p>
