--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -27,7 +27,7 @@ blog: menu
     <div class="flex-wrapper">
 
       <div class="flex-item">
-        <div class="item-image">
+        <div class="item-image border-white">
           <%= image_tag "assets/images/bands/electric-hollers.jpg", alt: "Electric Hollers" %>
         </div>
         <div class="item-text">
@@ -36,6 +36,20 @@ blog: menu
           </h3>
           <p>
             <%= t("sections.bands.electric-hollers.text") %>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image border-white">
+          <%= image_tag "assets/images/bands/10000v.jpg", alt: "10.000 Volt Blues Band" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            10.000 Volt Blues Band
+          </h3>
+          <p>
+            <%= t("sections.bands.volt.text") %>
           </p>
         </div>
       </div>
@@ -55,8 +69,8 @@ blog: menu
     <div class="flex-wrapper">
 
       <div class="flex-item">
-        <div class="item-image">
-          <%= image_tag "assets/images/breweries/stanislaus-brewskovitch.svg", alt: "Stanislaus Brewskovitch" %>
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/stanislaus-brewskovitch.png", alt: "Stanislaus Brewskovitch" %>
         </div>
         <div class="item-text">
           <h3>
@@ -69,7 +83,7 @@ blog: menu
       </div>
 
       <div class="flex-item">
-        <div class="item-image">
+        <div class="item-image border-light-gray">
           <%= image_tag "assets/images/breweries/berging-brouwerij.png", alt: "Berging Brouwerij" %>
         </div>
         <div class="item-text">
@@ -83,7 +97,7 @@ blog: menu
       </div>
 
       <div class="flex-item">
-        <div class="item-image">
+        <div class="item-image border-light-gray">
           <%= image_tag "assets/images/breweries/brouwerij-klein-duimpje.png", alt: "Brouwerij Klein Duimpje" %>
         </div>
         <div class="item-text">
@@ -92,6 +106,48 @@ blog: menu
           </h3>
           <p>
             <%= t("sections.breweries.klein-duimpje.text") %>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/nevel-artisan-ales.png", alt: "Nevel Artisan Ales" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Nevel Artisan Ales
+          </h3>
+          <p>
+            <%= t("sections.breweries.nevel.text") %>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/doggerland.png", alt: "Doggerland Craft Cider" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Doggerland Craft Cider
+          </h3>
+          <p>
+            <%= t("sections.breweries.doggerland.text") %>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/vandestreek.png", alt: "VandeStreek" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            VandeStreek
+          </h3>
+          <p>
+            <%= t("sections.breweries.vandestreek.text") %>
           </p>
         </div>
       </div>
