Add KAIJU, Moon Dog and Frontaal

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -152,6 +152,48 @@ blog: menu
         </div>
       </div>
 
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/kaiju.png", alt: "KAIJU Beer" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            KAIJU Beer
+          </h3>
+          <p>
+            <%= t("sections.breweries.kaiju.text") %>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/moon-dog.png", alt: "Moon Dog Craft Brewery" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Moon Dog Craft Brewery
+          </h3>
+          <p>
+            <%= t("sections.breweries.moon-dog.text") %>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/frontaal.png", alt: "Frontaal" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Frontaal
+          </h3>
+          <p>
+            <%= t("sections.breweries.frontaal.text") %>
+          </p>
+        </div>
+      </div>
+
       <p class="more">
         <em><%= t("sections.breweries.more") %></em>
       </p>
