--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -222,6 +222,20 @@ blog: menu
         </div>
       </div>
 
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/eggens.png", alt: "Eggens" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Eggens
+          </h3>
+          <p>
+            <%= t("sections.breweries.eggens.text") %>
+          </p>
+        </div>
+      </div>
+
       <p class="more">
         <em><%= t("sections.breweries.more") %></em>
       </p>
