--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -194,6 +194,48 @@ blog: menu
         </div>
       </div>
 
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/diggelfjoer.png", alt: "Diggelfjoer" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Diggelfjoer
+          </h3>
+          <p>
+            <%= t("sections.breweries.diggelfjoer.text") %>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/de-prael.png", alt: "De Prael" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            De Prael
+          </h3>
+          <p>
+            <%= t("sections.breweries.de-prael.text") %>
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image border-light-gray">
+          <%= image_tag "assets/images/breweries/eggens.png", alt: "Eggens" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Eggens
+          </h3>
+          <p>
+            <%= t("sections.breweries.eggens.text") %>
+          </p>
+        </div>
+      </div>
+
       <p class="more">
         <em><%= t("sections.breweries.more") %></em>
       </p>
