--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -54,6 +54,20 @@ blog: menu
         </div>
       </div>
 
+      <div class="flex-item">
+        <div class="item-image border-white">
+          <%= image_tag "assets/images/bands/lone-wolf.jpg", alt: "LONE WOLF" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            LONE WOLF
+          </h3>
+          <p>
+            <%= t("sections.bands.lone-wolf.text") %>
+          </p>
+        </div>
+      </div>
+
       <p class="more">
         <em><%= t("sections.bands.more") %></em>
       </p>
